--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,4 @@
-<!-- JBoss, Home of Professional Open Source Copyright 2012, Red Hat, Inc., 
+<!-- JBoss, Home of Professional Open Source Copyright Red Hat Inc., 
 	and individual contributors by the @authors tag. See the copyright.txt in 
 	the distribution for a full listing of individual contributors. Licensed 
 	under the Apache License, Version 2.0 (the "License"); you may not use this 
