Adding aergoear-controller as a dependency to server.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -56,6 +56,7 @@ to work with JBoss EAP 6. It requires you have access to the JBoss EAP 6 maven r
 
         <!-- Latest stable release of PicketLink -->
         <picketlink.version>3.0.0-2013Feb08</picketlink.version>
+        <aerogear.controller.version>1.0.0.CR1-20022013-SNAPSHOT</aerogear.controller.version>
     </properties>
 
     <dependencyManagement>
@@ -142,6 +143,13 @@ read this as the JBoss stack of the Java EE 6 APIs) -->
                     <artifactId>slf4j-api</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jboss.aerogear</groupId>
+            <artifactId>aerogear-controller</artifactId>
+            <version>${aerogear.controller.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Now we declare any tools needed -->
