--- a/server/pom.xml
+++ b/server/pom.xml
@@ -82,6 +82,12 @@ read this as the JBoss stack of the Java EE 6 APIs) -->
     <dependencies>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.jboss.aerogear</groupId>
             <artifactId>aerogear-security</artifactId>
             <version>${aerogear.security.version}</version>
